# PyMesh-win-Depends-VS2015

./: CMakeLists.txt  README.md
clipper/: CMakeLists.txt
cork/: CMakeLists.txt
cork/mpir/: config.h
cork/src/isct/: triangle.c
gen_microstructure/: gen_micro.py  inflate_micro.py  insert_mass.py  micro_thickness.py  tet_in_cube.py
qhull-master/: CMakeLists.txt
sparsehash/: UpgradeLog.htm  sparsehash.sln
sparsehash/vsprojects/hashtable_test/: hashtable_test.vcxproj
sparsehash/vsprojects/hashtable_test/x64/Release/hashtable_test.tlog/: hashtable_test.lastbuildstate
sparsehash/vsprojects/libc_allocator_with_realloc_test/: libc_allocator_with_realloc_test.vcxproj
sparsehash/vsprojects/libc_allocator_with_realloc_test/x64/Release/libc_all.FCDB3718.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
sparsehash/vsprojects/simple_test/: simple_test.vcxproj
sparsehash/vsprojects/simple_test/x64/Release/simple_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
sparsehash/vsprojects/sparsetable_unittest/: sparsetable_unittest.vcxproj
sparsehash/vsprojects/time_hash_map/: time_hash_map.vcxproj
sparsehash/vsprojects/type_traits_unittest/: type_traits_unittest.vcxproj
sparsehash/vsprojects/type_traits_unittest/x64/Release/type_tra.008CCFED.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
triangle/: CMakeLists.txt
