CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(cork)

FILE(GLOB_RECURSE SRC_FILES src/*.c src/*.cpp)
FILE(GLOB_RECURSE INC_FILES src/*.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/accel)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/file_formats)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/isct)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/math)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/mesh)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/rawmesh)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/util)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/mpir)

ADD_DEFINITIONS(-DNO_TIMER)
ADD_DEFINITIONS(-DNOMINMAX)
ADD_DEFINITIONS(-D_USE_MATH_DEFINES)

ADD_LIBRARY(cork STATIC ${SRC_FILES} ${INC_FILES})

TARGET_LINK_LIBRARIES(cork ${CMAKE_CURRENT_SOURCE_DIR}/mpir/mpir.lib)
